[package]
name = "rage_of_ikthillion"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[dependencies]
bevy = { version = "0.10.0", features = ["tga", "jpeg", "wav", "mp3"] }
bevy_rapier3d = { version = "0.21.0", features = ["debug-render"] }
bevy_mod_gizmos = "0.4.0"
bevy-inspector-egui = "0.18.0"
rand = "0.8.5"
serde = "1.0.156"
ron = "0.8.0"
bincode = "1.3.3"
leafwing-input-manager = "0.9.1"
bevy_embedded_assets = "0.7"
